--- a/fav/heart/index.html
+++ b/fav/heart/index.html
@@ -24,8 +24,8 @@
 					administration and programmers,</span><br /> <span class="space" /><span
 					class="comments">* so I write some code to show my love to
 					you.</span><br /> <span class="space" /><span class="comments">*/</span><br />
-				Boy i = <span class="keyword">new</span> Boy(<span class="string">"M"</span>);<br />
-				Girl u = <span class="keyword">new</span> Girl(<span class="string">"Y"</span>);<br />
+				Boy i = <span class="keyword">new</span> Boy(<span class="string">"I"</span>);<br />
+				Girl u = <span class="keyword">new</span> Girl(<span class="string">"U"</span>);<br />
 				<span class="comments">// April 28, 2012, I told you I love
 					you. </span><br /> i.love(u);<br /> <span class="comments">//
 					but..., what you said that meaning we are still good friends.</span><br />
@@ -70,7 +70,7 @@
 					</div>
 					<div id="loveu">
 						Love u forever and ever.<br />
-						<div class="signature">- M</div>
+						<div class="signature">- I</div>
 					</div>
 				</div>
 			</div>
