--- a/fav/heart/index.html
+++ b/fav/heart/index.html
@@ -20,9 +20,7 @@
 		<div id="content">
 			<div id="code">
 				<span class="comments">/**</span><br /> <span class="space" /><span
-					class="comments">* We are both XXX Unversity business
-					administration and programmers,</span><br /> <span class="space" /><span
-					class="comments">* so I write some code to show my love to
+					class="comments">* I write some code to show my love to
 					you.</span><br /> <span class="space" /><span class="comments">*/</span><br />
 				Boy i = <span class="keyword">new</span> Boy(<span class="string">"I"</span>);<br />
 				Girl u = <span class="keyword">new</span> Girl(<span class="string">"U"</span>);<br />
