丰富个人简历内容

--- a/fav/profile.html
+++ b/fav/profile.html
@@ -228,7 +228,7 @@ li > .title {
               <span class="title">美容美发连锁管理系统（参与）</span>
               <span class="keywords">Spring MVC, Hibernate, Flex, SQL Server</span>
               <span class="desc">
-                参与大部分模块的前后端实现与维护，项目面向美容美发行业，实现了诸如人事、库存、绩效、收银、报表等诸多功能。
+                参与大部分模块的前后端实现与维护，项目面向美容美发行业，实现了诸如人事、库存、绩效、收银、报表等诸多功能。<br>
                 感想：这是我的一份工作，从小白到成为项目的中坚力量，既有成长又有不足，养成了看源码看文档的习惯，日后受益匪浅。
               </span>
             </li>
