我也不知道改了啥

--- a/404.html
+++ b/404.html
@@ -1,1 +1,10 @@
-<h1>404</h1>
+---
+layout: default
+---
+<h1>页面或文章未找到.</h1>
+<h4>即将返回主页...</h4>
+<script>
+setTimeout(function(){
+  location.href = location.protocol + "//" + location.host;
+}, 2000);
+</script>
