--- a/fav/zss/profile.html
+++ b/fav/zss/profile.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>张沙沙-法务</title>
+		<title>张沙沙-律师助理</title>
 		<link rel="stylesheet" type="text/css" href="profile.css">
 	</head>
 	<body>
@@ -23,18 +23,18 @@
 				<div class="content">
 					<div class="block">
 						<div class="time">2014.09 - 现在</div>
-						<div class="content-block">
-							<span>浙江大学</span>
-							<span class="center">法律</span>
-							<span class="right">硕士</span>
+						<div class="content-block col3">
+							<span class="bold">浙江大学</span>
+							<span class="bold center">法律</span>
+							<span class="bold right">硕士</span>
 						</div>
 					</div>
 					<div class="block">
 						<div class="time">2010.09 - 2014.06</div>
-						<div class="content-block">
-							<span>浙江理工大学</span>
-							<span class="center">材料科学与工程</span>
-							<span class="right">本科</span>
+						<div class="content-block col3">
+							<span class="bold">浙江理工大学</span>
+							<span class="bold center">材料科学与工程</span>
+							<span class="bold right">本科</span>
 						</div>
 					</div>
 					<div class="block">
@@ -51,10 +51,10 @@
 
 			<div class="evaluation row">
 				<div class="title">自我评价</div>
-				<div class="content intent2">
-					<ul>
-						<li>积极、负责、适应能力强，具有团队合作能力及好的协调沟通能力</li>	
-						<li>喜欢读书、写作、跑步</li>
+				<div class="content">
+					<ul class="content-block npl">
+						<li>曾作为校文化部长多次组织大型活动，有较好的沟通协调能力</li>	
+						<li>热爱法律，希望能在在法律行业有所作为</li>
 					</ul>
 				</div>
 			</div>
@@ -66,13 +66,15 @@
 						<div class="time">
 							2015.10 – 2016.11
 						</div>
-						<div class="content-block">
+						<div class="content-block col2">
 							<span class="bold">泽大律师事务所</span>
 							<span class="bold">研究“娱乐法”相关法律问题</span>
 						</div>
 						<div class="content-block">
-							<ul>
+							<ul class="detail">
 								<li>1111</li>
+								<li>2222</li>
+								<li>3333</li>
 							</ul>
 						</div>
 					</div>
@@ -80,9 +82,16 @@
 						<div class="time">
 							2016.06 – 2016.09
 						</div>
-						<div class="content-block">
+						<div class="content-block col2">
 							<span class="bold">金通专利事务所</span>
 							<span class="bold">负责专利申请文件的撰写和答复审查意见</span>
+						</div>
+						<div class="content-block">
+							<ul class="detail">
+								<li>1111</li>
+								<li>2222</li>
+								<li>3333</li>
+							</ul>
 						</div>
 					</div>
 				</div>
@@ -93,26 +102,29 @@
 				<div class="content">
 					<div class="block">
 						<div class="time">
-							2014.09－2016.06
+							2014.09 – 2016.06
 						</div>
 						<div class="content-block">
-							浙江大学光华法学院14级法律硕士第一党支部宣传委员
+							<span class="subtitle">浙江大学</span>  
+							<span>光华法学院14级法律硕士第一党支部宣传委员</span>
 						</div>
 					</div>
 					<div class="block">
 						<div class="time">
-							2012.09－2013.06
+							2012.09 – 2013.06
 						</div>
 						<div class="content-block">
-							浙江理工大学启心学院团委副书记
+							<span class="subtitle">浙江理工大学</span>
+							<span>启心学院团委副书记</span>  
 						</div>
 					</div>
 					<div class="block">
 						<div class="time">
-							2011.09－2012.06
+							2011.09 – 2012.06
 						</div>
 						<div class="content-block">
-							浙江理工大学启新学院信息文化部部长
+							<span class="subtitle">浙江理工大学</span> 
+							<span>启新学院信息文化部部长</span>
 						</div>
 					</div>
 				</div>
@@ -126,7 +138,8 @@
 							2016.12
 						</div>
 						<div class="content-block">
-							浙江大学“优秀研究生”荣誉称号
+							<span class="subtitle">浙江大学</span>
+							<span>“优秀研究生”荣誉称号</span>
 						</div>
 					</div>
 					<div class="block">
@@ -134,7 +147,8 @@
 							2015.12
 						</div>
 						<div class="content-block">
-							浙江大学“优秀研究生”荣誉称号
+							<span class="subtitle">浙江大学</span>
+							<span>“优秀研究生”荣誉称号</span>
 						</div>
 					</div>
 					<div class="block">
@@ -142,7 +156,8 @@
 							2013.11
 						</div>
 						<div class="content-block">
-							浙江理工大学优秀学生三等奖学金
+							<span class="subtitle">浙江理工大学</span> 
+							<span>优秀学生三等奖学金</span>
 						</div>
 					</div>
 					<div class="block">
@@ -150,7 +165,8 @@
 							2013.11
 						</div>
 						<div class="content-block">
-							浙江理工大学“优秀学生干部”荣誉称号 
+							<span class="subtitle">浙江理工大学</span>  
+							<span>“优秀学生干部”荣誉称号</span>
 						</div>
 					</div>
 					<div class="block">
@@ -158,7 +174,8 @@
 							2012.11
 						</div>
 						<div class="content-block">
-							浙江理工大学社会工作奖学金
+							<span class="subtitle">浙江理工大学</span>  
+							<span>社会工作奖学金</span>
 						</div>
 					</div>
 					<div class="block">
@@ -166,9 +183,20 @@
 							2011.11
 						</div>
 						<div class="content-block">
-							浙江理工大学励志单项奖学金
+							<span class="subtitle">浙江理工大学</span>  
+							<span>励志单项奖学金</span>
 						</div>
 					</div>
+				</div>
+			</div>
+
+			<div class="favorites row">
+				<div class="title">兴趣爱好</div>
+				<div class="content">
+					<ul class="content-block npl">
+						<li>读书、跑步</li>
+						<li>其它的自己想一到两条补充</li>	
+					</ul>
 				</div>
 			</div>
 		</div>
