--- a/fav/zss/profile.html
+++ b/fav/zss/profile.html
@@ -37,14 +37,18 @@
 							<span class="bold right">本科</span>
 						</div>
 					</div>
-					<div class="block">
-						<div class="content-block">
-							<ul class="npl">
-								<li>国家司法考试（405分）</li>
-								<li>专业代理人考试（已通过两门）</li>
-								<li>英语六级（500分），无障碍阅读专业文献</li>
-							</ul>
-						</div>
+				</div>
+			</div>
+
+			<div class="favorites row">
+				<div class="title">技能证书</div>
+				<div class="content">
+					<div class="content-block">
+						<ul class="npl">
+							<li>国家司法考试（405分）</li>
+							<li>专业代理人考试（已通过两门）</li>
+							<li>英语六级（500分），阅读专业文献无障碍</li>
+						</ul>
 					</div>
 				</div>
 			</div>
@@ -53,8 +57,9 @@
 				<div class="title">自我评价</div>
 				<div class="content">
 					<ul class="content-block npl">
-						<li>曾作为校文化部长多次组织大型活动，有较好的沟通协调能力</li>	
-						<li>热爱法律，希望能在在法律行业有所作为</li>
+						<li>曾组织毕业生晚会、圣诞节舞会等活动，有较强的团队合作意识及组织协调能力</li>	
+						<li>热爱法律，希望能在律师行业有所作为</li>
+						<li>喜欢读书、跑步</li>
 					</ul>
 				</div>
 			</div>
@@ -72,9 +77,9 @@
 						</div>
 						<div class="content-block">
 							<ul class="detail">
-								<li>1111</li>
-								<li>2222</li>
-								<li>3333</li>
+								<li>有关演员从业资格及从业规范的法规整理</li>
+								<li>与演员有关的案例搜集，整理其中存在的法律风险</li>
+								<li>草拟与修改演员聘用合同</li>
 							</ul>
 						</div>
 					</div>
@@ -84,13 +89,13 @@
 						</div>
 						<div class="content-block col2">
 							<span class="bold">金通专利事务所</span>
-							<span class="bold">负责专利申请文件的撰写和答复审查意见</span>
+							<span class="bold">参与专利申请文件的撰写和答复审查意见</span>
 						</div>
 						<div class="content-block">
 							<ul class="detail">
-								<li>1111</li>
-								<li>2222</li>
-								<li>3333</li>
+								<li>答复审查意见</li>
+								<li>撰写权利要求书、说明书</li>
+								<li>与技术人员沟通专利申请文件中存在的问题</li>
 							</ul>
 						</div>
 					</div>
@@ -115,7 +120,7 @@
 						</div>
 						<div class="content-block">
 							<span class="subtitle">浙江理工大学</span>
-							<span>启心学院团委副书记</span>  
+							<span>启新学院团委副书记</span>  
 						</div>
 					</div>
 					<div class="block">
@@ -190,16 +195,6 @@
 				</div>
 			</div>
 
-			<div class="favorites row">
-				<div class="title">兴趣爱好</div>
-				<div class="content">
-					<ul class="content-block npl">
-						<li>读书、跑步</li>
-						<li>其它的自己想一到两条补充</li>	
-					</ul>
-				</div>
-			</div>
 		</div>
-
 	</body>
 </html>
