--- a/fav/zss/profile.html
+++ b/fav/zss/profile.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>张沙沙-律师助理</title>
+		<title>张沙沙-法务专员</title>
 		<link rel="stylesheet" type="text/css" href="profile.css">
 	</head>
 	<body>
@@ -15,7 +15,7 @@
 					<span class="basic-row">187-6812-7437</span>
 					<span class="basic-row">zjuzss@126.com</span>
 					<span class="basic-row">中共党员 | 25岁 | 河南周口 | 浙江大学之江校区</span>
-					<span class="basic-row bold">求职意向： 律师助理 | 杭州</span>
+					<span class="basic-row bold">求职意向： 法务专员 | 杭州</span>
 				</div>
 			</div>
 			<div class="education row">
