--- a/fav/zss/profile_163.html
+++ b/fav/zss/profile_163.html
@@ -2,21 +2,21 @@
 <html en="zh_CN">
 <meta charset="utf-8">
 	<head>
-		<title>张沙沙-律师助理</title>
+		<title>张沙沙-法务专员</title>
 		<link rel="stylesheet" type="text/css" href="profile.css">
 	</head>
-	<body>
+	<body style="font-family: -webkit-body;">
 		<div class="container">
 			<div class="basic row">
 				<div class="avatar">
 					<img src="zss-avatar.png">
 				</div>
 				<div class="basic-info">
-					<h1 class="name">张沙沙</h1>
+					<h1 class="name">张沙沙<span class="txt20">（女）</span></h1>
 					<span class="basic-row">187-6812-7437</span>
 					<span class="basic-row">zjuzss@126.com</span>
 					<span class="basic-row">中共党员 | 25岁 | 河南周口 | 浙江大学之江校区</span>
-					<span class="basic-row bold">求职意向： 律师助理 | 杭州</span>
+					<span class="basic-row bold">求职意向： 法务专员 | 杭州</span>
 				</div>
 			</div>
 			<div class="education row">
@@ -26,7 +26,7 @@
 						<div class="time">2014.09 - 现在</div>
 						<div class="content-block col3">
 							<span class="bold">浙江大学</span>
-							<span class="bold center">法律</span>
+							<span class="bold center">法律（知识产权方向）</span>
 							<span class="bold right">硕士</span>
 						</div>
 					</div>
@@ -45,23 +45,13 @@
 				<div class="title">技能证书</div>
 				<div class="content">
 					<div class="content-block">
-						<ul class="npl">
-							<li>国家司法考试（405分）</li>
-							<li>专业代理人考试（已通过两门）</li>
-							<li>英语六级（500分），阅读专业文献无障碍</li>
+						<ul class="pl5">
+							<li class="bold">国家司法考试（405分）</li>
+							<li><span class="bold">英语六级（500分）</span><br>
+							<span class="fav-detail">2014年与同学合作发表论文 <span class="en-title">Preparation of Square and Labyrinth-Like TiO<sub>2</sub> Particles for Photo-Degradation of Organic Pollutants</span></span></li>
+							<li>专利代理人考试（已通过两门）</li>
 						</ul>
 					</div>
-				</div>
-			</div>
-
-			<div class="evaluation row">
-				<div class="title">自我评价</div>
-				<div class="content">
-					<ul class="content-block npl">
-						<li>曾组织毕业生晚会、圣诞节舞会等活动，有较强的团队合作意识及组织协调能力</li>	
-						<li>热爱法律，希望能在律师行业有所作为</li>
-						<li>喜欢读书、跑步</li>
-					</ul>
 				</div>
 			</div>
 
@@ -74,12 +64,12 @@
 						</div>
 						<div class="content-block col2">
 							<span class="bold">泽大律师事务所</span>
-							<span class="bold">研究“娱乐法”相关法律问题</span>
+							<span class="bold">研究“娱乐法”演员相关法律问题</span>
 						</div>
 						<div class="content-block">
-							<ul class="detail">
-								<li>有关演员从业资格及从业规范的法规整理</li>
-								<li>与演员有关的案例搜集，整理其中存在的法律风险</li>
+							<ul class="npl detail">
+								<li>有关演员从业资格及从业规范的法律法规整理</li>
+								<li>搜集演员相关的案例，并整理其中可能存在的法律风险</li>
 								<li>草拟与修改演员聘用合同</li>
 							</ul>
 						</div>
@@ -90,10 +80,10 @@
 						</div>
 						<div class="content-block col2">
 							<span class="bold">金通专利事务所</span>
-							<span class="bold">参与专利申请文件的撰写和答复审查意见</span>
+							<span class="bold">撰写专利申请文件和答复审查意见</span>
 						</div>
 						<div class="content-block">
-							<ul class="detail">
+							<ul class="npl detail">
 								<li>答复审查意见</li>
 								<li>撰写权利要求书、说明书</li>
 								<li>与技术人员沟通专利申请文件中存在的问题</li>
@@ -112,7 +102,10 @@
 						</div>
 						<div class="content-block">
 							<span class="subtitle">浙江大学</span>  
-							<span>光华法学院14级法律硕士第一党支部宣传委员</span>
+							<span class="bold">光华法学院14级法律硕士第一党支部宣传委员</span>
+							<ul class="npl detail">
+								<li>负责支部活动的组织和宣传</li>
+							</ul>
 						</div>
 					</div>
 					<div class="block">
@@ -121,7 +114,11 @@
 						</div>
 						<div class="content-block">
 							<span class="subtitle">浙江理工大学</span>
-							<span>启新学院团委副书记</span>  
+							<span class="bold">启新学院团委副书记</span>
+							<ul class="npl detail">
+								<li>组织举办了“女生节，实现她的愿望”活动，在学院促成了一次大范围的男女生互动</li>
+								<li>带领13位学生干部进行“变废为宝”暑期社会实践，被评为校级社会实践先进个人</li>
+							</ul>
 						</div>
 					</div>
 					<div class="block">
@@ -130,7 +127,11 @@
 						</div>
 						<div class="content-block">
 							<span class="subtitle">浙江理工大学</span> 
-							<span>启新学院信息文化部部长</span>
+							<span class="bold">启新学院信息文化部部长</span>
+							<ul class="npl detail">
+								<li>负责人物采访和新闻稿的撰写</li>
+								<li>主编启新学院院刊</li>
+							</ul>
 						</div>
 					</div>
 				</div>
@@ -193,6 +194,16 @@
 							<span>励志单项奖学金</span>
 						</div>
 					</div>
+				</div>
+			</div>
+
+			<div class="evaluation row">
+				<div class="title">自我评价</div>
+				<div class="content">
+					<ul class="content-block npl">
+						<li>积极、热情、负责、适应能力强，具有良好的协调沟通能力和团队合作精神</li>
+						<li>喜欢知识产权，善于分析思考，学习能力和执行力较强，能从实践中快速成长</li>
+					</ul>
 				</div>
 			</div>
 
