--- a/fav/zss/profile_binjiang.html
+++ b/fav/zss/profile_binjiang.html
@@ -2,7 +2,7 @@
 <html en="zh_CN">
 <meta charset="utf-8">
 	<head>
-		<title>张沙沙-法务专员</title>
+		<title>张沙沙-高新区（滨江）政府职员</title>
 		<link rel="stylesheet" type="text/css" href="profile.css">
 	</head>
 	<body style="font-family: -webkit-body;">
@@ -16,7 +16,7 @@
 					<span class="basic-row">187-6812-7437</span>
 					<span class="basic-row">zjuzss@126.com</span>
 					<span class="basic-row">中共党员 | 25岁 | 河南周口 | 浙江大学之江校区</span>
-					<span class="basic-row bold">求职意向： 法务专员 | 杭州</span>
+					<span class="basic-row bold">求职意向：高新区（滨江）政府职员 | 杭州</span>
 				</div>
 			</div>
 			<div class="education row">
@@ -26,7 +26,7 @@
 						<div class="time">2014.09 - 现在</div>
 						<div class="content-block col3">
 							<span class="bold">浙江大学</span>
-							<span class="bold center">法律（经济法）</span>
+							<span class="bold center">法律（知识产权方向）</span>
 							<span class="bold right">硕士</span>
 						</div>
 					</div>
@@ -190,11 +190,11 @@
 				<div class="title">自我评价</div>
 				<div class="content">
 					<ul class="content-block npl">
-						<li>学习能力强，一次性以405分的成绩通过国家司法考试；</li>
-						<li>沟通交流、组织协调能力强，曾带领13位学生干部进行“变废为宝”社会实践；</li>
-						<li>具有较强的适应能力，能从实践中快速成长，表现得到了实习单位的认可；</li>
-						<li>文字功底扎实，曾主编学院院刊、撰写新闻稿；</li>
-						<li>喜欢读书、跑步，热爱生活，懂得分享和感恩。</li>
+					<li>学习能力强，一次性以405分的成绩通过国家司法考试；</li>
+					<li>沟通交流、组织协调能力强，带领13位学生干部进行“变废为宝”社会实践活动；</li>
+					<li>踏实认真、有强烈的进取心和责任心，有志于从事公共服务工作；</li>
+					<li>有较好的文字功底，曾负责主编学院院刊和撰写新闻稿；</li>
+					<li>热爱生活，喜欢读书和跑步，懂得分享和感恩。</li>
 					</ul>
 				</div>
 			</div>
