--- a/fav/zss/profile_law.html
+++ b/fav/zss/profile_law.html
@@ -2,7 +2,7 @@
 <html en="zh_CN">
 <meta charset="utf-8">
 	<head>
-		<title>张沙沙-法务专员</title>
+		<title>张沙沙-律师助理</title>
 		<link rel="stylesheet" type="text/css" href="profile.css">
 	</head>
 	<body style="font-family: -webkit-body;">
@@ -16,7 +16,7 @@
 					<span class="basic-row">187-6812-7437</span>
 					<span class="basic-row">zjuzss@126.com</span>
 					<span class="basic-row">中共党员 | 25岁 | 河南周口 | 浙江大学之江校区</span>
-					<span class="basic-row bold">求职意向： 法务专员 | 杭州</span>
+					<span class="basic-row bold">求职意向： 律师助理 | 杭州</span>
 				</div>
 			</div>
 			<div class="education row">
@@ -190,11 +190,11 @@
 				<div class="title">自我评价</div>
 				<div class="content">
 					<ul class="content-block npl">
-						<li>学习能力强，一次性以405分的成绩通过国家司法考试；</li>
-						<li>沟通交流、组织协调能力强，曾带领13位学生干部进行“变废为宝”社会实践；</li>
-						<li>具有较强的适应能力，能从实践中快速成长，表现得到了实习单位的认可；</li>
-						<li>文字功底扎实，曾主编学院院刊、撰写新闻稿；</li>
-						<li>喜欢读书、跑步，热爱生活，懂得分享和感恩。</li>
+					<li>学习能力强，一次性以405分的成绩通过国家司法考试；</li>
+					<li>沟通交流、组织协调能力强，带领13位学生干部进行“变废为宝”社会实践；</li>
+					<li>具有较强的适应能力，能从实践中快速成长，得到了实习单位的认可；</li>
+					<li>文字功底扎实，负责主编启新学院院刊和撰写新闻稿；</li>
+					<li>认真负责，有较强的执行力，想要长期从事律师行业。</li>
 					</ul>
 				</div>
 			</div>
